# FoxNAS

./: .gitignore  CMakeLists.txt  Dockerfile.build  README-zh.md  README.md  e -i 78d7939dd5a0fe791678e351afe9c59d03f93828^  e -i 78d7939q  icon.aps  icon.desktop  icon.rc
.github/workflows/: cmake.yml
.trae/documents/: 为 FoxNAServer 制作 Docker 镜像.md  修复 Qt 端 HTTPS 502 错误.md  修改后端使不存在的API返回404.md
src/: Addnasdialog.cpp  Addnasdialog.h  Addnasdialog.ui  DetailDialog.cpp  DetailDialog.h  DetailDialog.ui  ErrorLogDialog.cpp  ErrorLogDialog.h  ErrorLogDialog.ui  LoadingDialog.cpp  LoadingDialog.h  LoadingDialog.ui  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NASLoginDialog.cpp  NASLoginDialog.h  NASLoginDialog.ui  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  ResetPasswordDialog.cpp  ResetPasswordDialog.h  ResetPasswordDialog.ui  RetrieveUsernameDialog.cpp  RetrieveUsernameDialog.h  RetrieveUsernameDialog.ui  main.cpp  main.qrc
src/MainTabWidgets/: AboutDialog.cpp  AboutDialog.ui  DDNSForm.cpp  DDNSForm.h  DDNSForm.ui  FileManagementForm.cpp  FileManagementForm.h  FileManagementForm.ui  InfoForm.cpp  InfoForm.h  InfoForm.ui  OverViewForm.cpp  OverViewForm.h  OverViewForm.ui  OverviewDiskItem.cpp  OverviewDiskItem.h  OverviewDiskItem.ui  SSHForm.cpp  SSHForm.h  SSHForm.ui  SettingsForm.cpp  SettingsForm.h  SettingsForm.ui  UserManagementForm.cpp  UserManagementForm.h  UserManagementForm.ui
src/MainTabWidgets/DDNSManagement/: DDNSSecrectSelectDialog.cpp  DDNSSecrectSelectDialog.h  DDNSSecrectSelectDialog.ui  DDNSSecretForm.cpp  DDNSSecretForm.h  DDNSSecretForm.ui
src/MainTabWidgets/FileManagement/: DirsAuthedSelectDialog.cpp  DirsAuthedSelectDialog.h  DirsAuthedSelectDialog.ui  FileManagementTabForm.cpp  FileManagementTabForm.h  FileManagementTabForm.ui  FileOperationFailedDialog.cpp  FileOperationFailedDialog.h  FileOperationFailedDialog.ui  FilePropertyDialog.cpp  FilePropertyDialog.h  FilePropertyDialog.ui  FileTreeView.cpp  FileTreeView.h
src/MainTabWidgets/Settings/: GeneralSettingForm.cpp  GeneralSettingForm.h  GeneralSettingForm.ui  PasswordChangeDialog.cpp  PasswordChangeDialog.h  PasswordChangeDialog.ui  SelfUserSettingsForm.cpp  SelfUserSettingsForm.h  SelfUserSettingsForm.ui
src/MainTabWidgets/UserManagement/: DIrPermissionEditDialog.cpp  DIrPermissionEditDialog.h  DIrPermissionEditDialog.ui  DirSelectDialog.cpp  DirSelectDialog.h  DirSelectDialog.ui  FilePermissionManagmentDialog.cpp  FilePermissionManagmentDialog.h  FilePermissionManagmentDialog.ui  PasswordModifyDialog.cpp  PasswordModifyDialog.h  PasswordModifyDialog.ui  UserDirPermissionDialog.cpp  UserDirPermissionDialog.h  UserDirPermissionDialog.ui  UserPermissionDialog.cpp  UserPermissionDialog.h  UserPermissionDialog.ui
src/MediaPlayer/: VideoPlayer.cpp  VideoPlayer.h  VideoPlayer.ui  VideoWidget.h
src/delegate/: ButtonDelegate.cpp  ButtonDelegate.h  ComboBoxDelegate.h  MultiButtonDelegate.cpp  MultiButtonDelegate.h
src/model/: FileSystemRemoteModel.cpp  FileSystemRemoteModel.h  RemoteFileSystemNode.h
src/resource/favicon/design/: FoxNAS.psd
src/util/: ApiRequest.cpp  ApiRequest.h  ApiUrl.cpp  ApiUrl.h  BytesConvertorUtil.cpp  BytesConvertorUtil.h  ClipboardManager.cpp  ClipboardManager.h  FileTranferListItem.cpp  FileTranferListItem.h  FileTranferListItem.ui  IniSettings.hpp  LanguageManager.cpp  LanguageManager.h  MemStore.cpp  MemStore.h  TaskExecutor.h
translations/: FoxNAS_ar.ts  FoxNAS_de.ts  FoxNAS_en.ts  FoxNAS_fr.ts  FoxNAS_ja.ts  FoxNAS_pt.ts  FoxNAS_ru.ts  FoxNAS_zh_CN.ts  FoxNAS_zh_TW.ts
